--- a/development/1-gateway+maven/gateway/src/main/resources/application.yaml
+++ b/development/1-gateway+maven/gateway/src/main/resources/application.yaml
@@ -20,8 +20,16 @@ spring:
           filters:
           - RewritePath=/api(?<segment>/?), $\{segment}
 
+# Spring Boot Actuator configuration
 management:
   endpoints:
     web:
       exposure:
         include: health,info
+
+# Application info
+info:
+  application:
+    name: Api Gateway
+    description: Openjob Api Gateway
+    version: 0.0.1-SNAPSHOT
