--- a/development/2-decentralized_configuration/config-server/src/main/resources/application.properties
+++ b/development/2-decentralized_configuration/config-server/src/main/resources/application.properties
@@ -10,5 +10,5 @@ info.application.name=Openjob config server
 info.application.description=A server used by microservices for retreiving their configuration
 info.application.version=0.0.1-SNAPSHOT
 
-spring.cloud.config.server.git.uri=<PATH-TO-YOUR-GIT-REPOSITORY> # <-- Set here the path of your repo!
+spring.cloud.config.server.git.uri=<PATH-TO-YOUR-GIT-REPOSITORY>
 spring.cloud.config.server.git.default-label=master
