--- a/microservice-application/config-server/src/main/resources/application.properties
+++ b/microservice-application/config-server/src/main/resources/application.properties
@@ -7,8 +7,10 @@ management.info.env.enabled=true
 
 # Application info (to be exposed by /info actuator)
 info.application.name=Openjob config server
-info.application.description=A server used by microservices for retreiving their configuration 
+info.application.description=A server used by microservices for retreiving their configuration
 info.application.version=0.0.1-SNAPSHOT
 
+#spring.cloud.config.server.git.uri=<PATH-TO-YOUR-GIT-REPOSITORY>
+#spring.cloud.config.server.git.uri=file:///Users/gianluca/Courses/SOSE/Examples/openjob-properties-repository
 spring.cloud.config.server.git.uri=https://github.com/gianlucafilippone/openjob-properties-repository
 spring.cloud.config.server.git.default-label=master
